--- a/dockerdev/Dockerfile
+++ b/dockerdev/Dockerfile
@@ -12,15 +12,20 @@ RUN openssl req -new -newkey rsa:4096 -days 3650 -nodes -x509 -subj  "/C=AU/ST=W
 RUN groupadd -g 1000 docker
 RUN useradd -g 1000 -u 1000 docker -s /bin/bash
 
-# For Linux
-RUN groupadd -g 20000 container
-RUN useradd -g 20000 -u 200000 container -s /bin/bash
-
-
 RUN mkdir /home/docker
 RUN chown docker.docker /home/docker
 RUN cp /root/.bashrc /home/docker
 RUN cp /root/.profile /home/docker
+
+# For Linux
+RUN groupadd -g 20000 container
+RUN useradd -g 20000 -u 200000 container -s /bin/bash
+
+RUN mkdir /home/container
+RUN chown docker.docker /home/container
+RUN cp /root/.bashrc /home/container
+RUN cp /root/.profile /home/container
+
 
 RUN echo 'if ! [ -n "${SUDO_USER}" -a -n "${SUDO_PS1}" ]; then' >> /etc/bash.bashrc
 RUN echo "export PS1='\e[0;31mdev:\e[m \e[0;32m${debian_chroot:+($debian_chroot)}\u@\h:\w\$\e[m '" >> /etc/bash.bashrc
