--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ phonenumbers = "8.12.48"
 babel = "2.10.1"
 django-dirtyfields = "1.8.1"
 django_media_serv = {git = "https://github.com/dbca-wa/django-media-serv.git", rev="main"}
+geopandas = "0.10.2"
 
 [tool.poetry.dev-dependencies]
 ipython = "^8.3.0"
