--- a/dockerdev/Dockerfile
+++ b/dockerdev/Dockerfile
@@ -30,6 +30,8 @@ RUN chown container.container /home/container
 RUN cp /root/.bashrc /home/container
 RUN cp /root/.profile /home/container
 
+RUN pip uninstall virtualenv
+RUN pip install virtualenv==20.0.23
 
 EXPOSE 8080
 HEALTHCHECK --interval=1m --timeout=5s --start-period=10s --retries=3 CMD ["wget", "-q", "-O", "-", "http://localhost:8080/"]
