--- a/dockerdev/Dockerfile
+++ b/dockerdev/Dockerfile
@@ -29,7 +29,7 @@ RUN mkdir /home/container
 RUN chown container.container /home/container
 RUN cp /root/.bashrc /home/container
 RUN cp /root/.profile /home/container
-RUN apt remove python3-virtualenv
+RUN apt remove python3-virtualenv -y
 
 #RUN pip uninstall virtualenv
 #RUN pip install virtualenv==20.0.23
