--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,8 +30,7 @@ stages:
     - task: Docker@2
       displayName: Push image
       inputs:
-        containerRegistry: |
-           $(dockerHub)
+        containerRegistry: DockerHub
         repository: username/repo
         command: push
         tags: $(Get-Date -Format yyyyMMddhhmmss)
