--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,7 @@ resources:
 
 variables:
   tag: '$(Build.BuildId)'
+  tag_date: ' $(Date:yyyyMMdd).$(Rev:.r)'
 
 stages:
 - stage: Build
@@ -26,16 +27,14 @@ stages:
         command: build
         dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
         tags:  |
-          $(Date:yyyyMMdd).$(Rev:.r)
-          $(tag)
           latest
+          $(tag)
+          
     - task: Docker@2
       displayName: Push image
       inputs:
         containerRegistry: DockerHub
         repository: dbcawa/leaseslicensing
         command: push
-        tags: | 
-                $(Date:yyyyMMdd).$(Rev:.r)
-                latest
+        tags: | latest
         
