--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ resources:
 
 variables:
   tag: '$(Build.BuildId)'
-  tag_date: ' $(Date:yyyyMMdd).$(Rev:.r)'
+  tag_date: '$(Date:yyyyMMdd).$(Rev:.r)'
 
 stages:
 - stage: Build
@@ -26,8 +26,7 @@ stages:
       inputs:
         command: build
         dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
-        tags:  |
-          latest
+        tags: | latest
           $(tag)
           
     - task: Docker@2
