--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,18 +22,14 @@ stages:
       vmImage: ubuntu-latest
     steps:
     - task: Docker@2
-      displayName: Build an image
+      displayName: Build an image and Push
       inputs:
-        command: build
+        command: buildAndPush
         dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
         tags: $(tag)
-          
-    - task: Docker@2
-      displayName: Push image
-      inputs:
         containerRegistry: DockerHub
         repository: dbcawa/leaseslicensing
-        command: push
-        tags: $(tag)
+        
+         
            
         
