--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ stages:
       inputs:
         command: buildAndPush
         dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
-        tags: $(tag)
+        tags: $(tagDate)
         containerRegistry: DockerHub
         repository: dbcawa/leaseslicensing
         
