--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ resources:
 
 variables:
   tag: '$(Build.BuildId)'
-  tagDate: $[ format('{0:yyyy}.{0:MM}.{0:dd}.{0:hh}.{0:mm}{0:ss}', pipeline.startTime) ]
+  tagDate: $[ format('{0:yyyy}.{0:MM}.{0:dd}.{0:HH}.{0:mm}{0:ss}', pipeline.startTime) ]
 
 stages:
 - stage: Build
