--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,9 @@ stages:
       inputs:
         command: buildAndPush
         dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
-        tags: $(tagDate)
+        tags: | 
+              latest
+              $(tagDate)
         containerRegistry: DockerHub
         repository: dbcawa/leaseslicensing
         
