--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ resources:
 variables:
   tag: '$(Build.BuildId)'
   tagDate: $[ format('{0:yyyy}.{0:MM}.{0:dd}.{0:HH}.{0:mm}{0:ss}', pipeline.startTime) ]
-
+  
 stages:
 - stage: Build
   displayName: Build image
@@ -31,6 +31,15 @@ stages:
               $(tagDate)
         containerRegistry: DockerHub
         repository: dbcawa/leaseslicensing
+    - task: Docker@2
+      displayName: Dev Build image and Push
+      inputs:
+        command: buildAndPush
+        dockerfile: '$(Build.SourcesDirectory)/dockerdev/Dockerfile'
+        tags: | 
+              leaseslicensing_dev_latest   
+        containerRegistry: DockerHub
+        repository: dbcawa/docker_app_dev       
         
          
            
