--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ django-dirtyfields = "1.8.1"
 django_media_serv = {git = "https://github.com/dbca-wa/django-media-serv.git", rev="main"}
 pandas = "1.5.2"
 geopandas = "0.12.2"
+python-docx = "0.8.11"
 
 [tool.poetry.dev-dependencies]
 ipython = "^8.3.0"
