--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ django-confy = "1.0.4" # old
 dj-database-url = "0.5.0" # old
 django_countries = "7.3.2"
 django_cron = "0.5.1"
-django_reversion = "5.0.0"
+django-reversion = "5.0.0"
+django-reversion-compare = "0.15.0"
 geojson = "2.5.0"
 python_dateutil = "2.8.2"
 pytz = "2020.1"
