--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,8 +33,8 @@ stages:
               $(tagDate)
         containerRegistry: DockerHub
         repository: dbcawa/leaseslicensing
-      env:
-        DOCKER_BUILDKIT: 1
+      # env:
+        # DOCKER_BUILDKIT: 1
 
     - task: Docker@2
       displayName: Dev Build image and Push
