--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ leaseslicensing/cache/*
 .ropeproject/
 .DAV
 .devcontainer
+!.devcontainer/devcontainer.json
 nohup.out
 
 # Byte-compiled / optimized / DLL files
