--- a/leaseslicensing/frontend/leaseslicensing/package.json
+++ b/leaseslicensing/frontend/leaseslicensing/package.json
@@ -31,6 +31,7 @@
         "sweetalert2": "^11.4.10",
         "uuid": "^8.3.2",
         "vue": "^3.2.32",
+        "vue-multiselect": "^3.0.0-beta.2",
         "vue-router": "^4.0.14"
     },
     "engines": {
