--- a/leaseslicensing/frontend/leaseslicensing/package.json
+++ b/leaseslicensing/frontend/leaseslicensing/package.json
@@ -46,6 +46,7 @@
     ],
     "devDependencies": {
         "eslint": "^8.15.0",
+        "moment-locales-webpack-plugin": "^1.2.0",
         "prettier": "2.8.4",
         "vls": "^0.7.6",
         "webpack-bundle-analyzer": "^4.8.0"
