--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ python_dateutil = "2.8.2"
 pytz = "2020.1"
 reportlab = "3.5.55"
 requests = "2.22.0"
+setuptools = "45.2.0"
 six = "1.14.0"
 # git+https://github.com/xzzy/webtemplate.git#egg=webtemplate_dbca
 webtemplate_dbca = {git = "https://github.com/dbca-wa/webtemplate2.git"}
@@ -45,7 +46,6 @@ pandas = "1.5.2"
 geopandas = "0.12.2"
 python-docx = "0.8.11"
 gunicorn = "19.10.0"
-setuptools = "^67.8.0"
 
 [tool.poetry.dev-dependencies]
 django-debug-toolbar = "^3.4.0"
