--- a/leaseslicensing/frontend/leaseslicensing/package.json
+++ b/leaseslicensing/frontend/leaseslicensing/package.json
@@ -33,7 +33,8 @@
         "uuid": "^8.3.2",
         "vue": "^3.2.32",
         "vue-multiselect": "^3.0.0-beta.2",
-        "vue-router": "^4.0.14"
+        "vue-router": "^4.0.14",
+        "moment-locales-webpack-plugin": "^1.2.0"
     },
     "engines": {
         "node": ">= 4.0.0",
@@ -46,7 +47,6 @@
     ],
     "devDependencies": {
         "eslint": "^8.15.0",
-        "moment-locales-webpack-plugin": "^1.2.0",
         "prettier": "2.8.4",
         "vls": "^0.7.6",
         "webpack-bundle-analyzer": "^4.8.0"
