--- a/leaseslicensing/frontend/leaseslicensing/package.json
+++ b/leaseslicensing/frontend/leaseslicensing/package.json
@@ -10,7 +10,29 @@
         "serve": "vue-cli-service serve"
     },
     "dependencies": {
-        "@ckeditor/ckeditor5-build-classic": "^36.0.1",
+        "@ckeditor/ckeditor5-alignment": "^38.0.1",
+        "@ckeditor/ckeditor5-autoformat": "^38.0.1",
+        "@ckeditor/ckeditor5-basic-styles": "^38.0.1",
+        "@ckeditor/ckeditor5-block-quote": "^38.0.1",
+        "@ckeditor/ckeditor5-ckbox": "^38.0.1",
+        "@ckeditor/ckeditor5-cloud-services": "^38.0.1",
+        "@ckeditor/ckeditor5-dev-translations": "^32.1.2",
+        "@ckeditor/ckeditor5-dev-utils": "^32.1.2",
+        "@ckeditor/ckeditor5-editor-classic": "^38.0.1",
+        "@ckeditor/ckeditor5-essentials": "^38.0.1",
+        "@ckeditor/ckeditor5-heading": "^38.0.1",
+        "@ckeditor/ckeditor5-image": "^38.0.1",
+        "@ckeditor/ckeditor5-indent": "^38.0.1",
+        "@ckeditor/ckeditor5-link": "^38.0.1",
+        "@ckeditor/ckeditor5-list": "^38.0.1",
+        "@ckeditor/ckeditor5-media-embed": "^38.0.1",
+        "@ckeditor/ckeditor5-paragraph": "^38.0.1",
+        "@ckeditor/ckeditor5-paste-from-office": "^38.0.1",
+        "@ckeditor/ckeditor5-remove-format": "^38.0.1",
+        "@ckeditor/ckeditor5-source-editing": "^38.0.1",
+        "@ckeditor/ckeditor5-table": "^38.0.1",
+        "@ckeditor/ckeditor5-theme-lark": "^38.0.1",
+        "@ckeditor/ckeditor5-typing": "^38.0.1",
         "@ckeditor/ckeditor5-vue": "^4.0.0",
         "@dbca/gov-vue3-components": "^0.0.11",
         "@fortawesome/fontawesome-free": "^6.0.0",
@@ -25,16 +47,18 @@
         "jszip": "^3.9.1",
         "lodash": "^4.17.21",
         "moment": "^2.29.3",
+        "moment-locales-webpack-plugin": "^1.2.0",
         "moment-range": "^4.0.2",
         "ol": "^6.3.1",
+        "postcss-loader": "^4.0.2",
+        "raw-loader": "^4.0.2",
         "select2": "^4.0.3",
         "select2-bootstrap-5-theme": "^1.2.0",
         "sweetalert2": "^11.4.10",
         "uuid": "^8.3.2",
         "vue": "^3.2.32",
         "vue-multiselect": "^3.0.0-beta.2",
-        "vue-router": "^4.0.14",
-        "moment-locales-webpack-plugin": "^1.2.0"
+        "vue-router": "^4.0.14"
     },
     "engines": {
         "node": ">= 4.0.0",
@@ -49,6 +73,6 @@
         "eslint": "^8.15.0",
         "prettier": "2.8.4",
         "vls": "^0.7.6",
-        "webpack-bundle-analyzer": "^4.8.0"
+        "webpack-bundle-analyzer": "^4.9.0"
     }
 }
