--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ pandas = "1.5.2"
 geopandas = "0.12.2"
 python-docx = "0.8.11"
 gunicorn = "19.10.0"
-setuptools = "^67.8.0"
+setuptools = "45.2.0"
 
 [tool.poetry.dev-dependencies]
 django-debug-toolbar = "^3.4.0"
