Enable vue3 linting and use prettier for formatting.

--- a/leaseslicensing/frontend/leaseslicensing/.eslintrc
+++ b/leaseslicensing/frontend/leaseslicensing/.eslintrc
@@ -1,4 +1,16 @@
 {
+    "extends": [
+        "eslint:recommended",
+        "plugin:vue/vue3-recommended",
+        "prettier"
+    ],
+    "plugins": [
+        "vue",
+        "prettier"
+    ],
+    "rules": {
+        "prettier/prettier": "error"
+    },
     "parserOptions": {
         "sourceType": "module",
         "ecmaVersion": 11
