--- a/leaseslicensing/frontend/leaseslicensing/package.json
+++ b/leaseslicensing/frontend/leaseslicensing/package.json
@@ -25,6 +25,7 @@
         "jszip": "^3.9.1",
         "lodash": "^4.17.21",
         "moment": "^2.29.3",
+        "moment-locales-webpack-plugin": "^1.2.0",
         "moment-range": "^4.0.2",
         "ol": "^6.3.1",
         "select2": "^4.0.3",
@@ -33,8 +34,7 @@
         "uuid": "^8.3.2",
         "vue": "^3.2.32",
         "vue-multiselect": "^3.0.0-beta.2",
-        "vue-router": "^4.0.14",
-        "moment-locales-webpack-plugin": "^1.2.0"
+        "vue-router": "^4.0.14"
     },
     "engines": {
         "node": ">= 4.0.0",
@@ -47,6 +47,8 @@
     ],
     "devDependencies": {
         "eslint": "^8.15.0",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-prettier": "^4.2.1",
         "prettier": "2.8.4",
         "vls": "^0.7.6",
         "webpack-bundle-analyzer": "^4.8.0"
