Updated approval document fixtures (added cover letter, made all mandatory)

--- a/leaseslicensing/components/approvals/fixtures/approvaltypedocumenttype.json
+++ b/leaseslicensing/components/approvals/fixtures/approvaltypedocumenttype.json
@@ -33,5 +33,12 @@
         "fields": {
             "name": "Sign-off sheet"
         }
+    },
+    {
+        "model": "leaseslicensing.approvaltypedocumenttype",
+        "pk": 6,
+        "fields": {
+            "name": "Cover letter"
+        }
     }
 ]
