--- a/leaseslicensing/components/approvals/fixtures/approvaltypedocumenttypeonapprovaltype.json
+++ b/leaseslicensing/components/approvals/fixtures/approvaltypedocumenttypeonapprovaltype.json
@@ -106,5 +106,41 @@
             "approval_type_document_type": 6,
             "mandatory": true
         }
+    },
+    {
+        "model": "leaseslicensing.approvaltypedocumenttypeonapprovaltype",
+        "pk": 17,
+        "fields": {
+            "approval_type": 6,
+            "approval_type_document_type": 7,
+            "mandatory": false
+        }
+    },
+    {
+        "model": "leaseslicensing.approvaltypedocumenttypeonapprovaltype",
+        "pk": 18,
+        "fields": {
+            "approval_type": 5,
+            "approval_type_document_type": 7,
+            "mandatory": false
+        }
+    },
+    {
+        "model": "leaseslicensing.approvaltypedocumenttypeonapprovaltype",
+        "pk": 19,
+        "fields": {
+            "approval_type": 4,
+            "approval_type_document_type": 7,
+            "mandatory": false
+        }
+    },
+    {
+        "model": "leaseslicensing.approvaltypedocumenttypeonapprovaltype",
+        "pk": 20,
+        "fields": {
+            "approval_type": 3,
+            "approval_type_document_type": 7,
+            "mandatory": false
+        }
     }
 ]
