--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ Django = "3.2.18"
 django-confy = "1.0.4" # old
 dj-database-url = "0.5.0" # old
 django_countries = "7.3.2"
-django_cron = "0.5.1"
+django_cron = "^0.6"
 django-reversion = "5.0.0"
 django-reversion-compare = "0.15.0"
 geojson = "2.5.0"
@@ -31,7 +31,7 @@ django-extensions = "3.1.5"
 # git+https://github.com/xzzy/ledger_api_client.git#egg=ledger_api_client
 ledger_api_client = {git = "https://github.com/dbca-wa/ledger_api_client.git"}
 whitenoise = "6.1.0"
-djangorestframework = "3.13.1"
+djangorestframework = "^3.14"
 djangorestframework-gis = "1.0"
 openpyxl = "3.0.9"
 django-ckeditor = "6.4.0"
