--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ pandas = "1.5.2"
 geopandas = "0.12.2"
 python-docx = "0.8.11"
 gunicorn = "19.10.0"
+drf-standardized-errors = "^0.12.5"
 
 [tool.poetry.dev-dependencies]
 django-debug-toolbar = "^3.4.0"
