--- a/leaseslicensing/frontend/leaseslicensing/package.json
+++ b/leaseslicensing/frontend/leaseslicensing/package.json
@@ -10,30 +10,30 @@
         "serve": "vue-cli-service serve"
     },
     "dependencies": {
-        "@ckeditor/ckeditor5-alignment": "^38.0.1",
-        "@ckeditor/ckeditor5-autoformat": "^38.0.1",
-        "@ckeditor/ckeditor5-basic-styles": "^38.0.1",
-        "@ckeditor/ckeditor5-block-quote": "^38.0.1",
-        "@ckeditor/ckeditor5-ckbox": "^38.0.1",
-        "@ckeditor/ckeditor5-cloud-services": "^38.0.1",
-        "@ckeditor/ckeditor5-dev-translations": "^32.1.2",
-        "@ckeditor/ckeditor5-dev-utils": "^32.1.2",
-        "@ckeditor/ckeditor5-editor-classic": "^38.0.1",
-        "@ckeditor/ckeditor5-essentials": "^38.0.1",
-        "@ckeditor/ckeditor5-heading": "^38.0.1",
-        "@ckeditor/ckeditor5-image": "^38.0.1",
-        "@ckeditor/ckeditor5-indent": "^38.0.1",
-        "@ckeditor/ckeditor5-link": "^38.0.1",
-        "@ckeditor/ckeditor5-list": "^38.0.1",
-        "@ckeditor/ckeditor5-media-embed": "^38.0.1",
-        "@ckeditor/ckeditor5-paragraph": "^38.0.1",
-        "@ckeditor/ckeditor5-paste-from-office": "^38.0.1",
-        "@ckeditor/ckeditor5-remove-format": "^38.0.1",
-        "@ckeditor/ckeditor5-source-editing": "^38.0.1",
-        "@ckeditor/ckeditor5-table": "^38.0.1",
-        "@ckeditor/ckeditor5-theme-lark": "^38.0.1",
-        "@ckeditor/ckeditor5-typing": "^38.0.1",
-        "@ckeditor/ckeditor5-vue": "^4.0.0",
+        "@ckeditor/ckeditor5-alignment": "^39.0",
+        "@ckeditor/ckeditor5-autoformat": "^39.0",
+        "@ckeditor/ckeditor5-basic-styles": "^39.0",
+        "@ckeditor/ckeditor5-block-quote": "^39.0",
+        "@ckeditor/ckeditor5-ckbox": "^39.0",
+        "@ckeditor/ckeditor5-cloud-services": "^39.0",
+        "@ckeditor/ckeditor5-dev-translations": "^38.4",
+        "@ckeditor/ckeditor5-dev-utils": "^38.4",
+        "@ckeditor/ckeditor5-editor-classic": "^39.0",
+        "@ckeditor/ckeditor5-essentials": "^39.0",
+        "@ckeditor/ckeditor5-heading": "^39.0",
+        "@ckeditor/ckeditor5-image": "^39.0",
+        "@ckeditor/ckeditor5-indent": "^39.0",
+        "@ckeditor/ckeditor5-link": "^39.0",
+        "@ckeditor/ckeditor5-list": "^39.0",
+        "@ckeditor/ckeditor5-media-embed": "^39.0",
+        "@ckeditor/ckeditor5-paragraph": "^39.0",
+        "@ckeditor/ckeditor5-paste-from-office": "^39.0",
+        "@ckeditor/ckeditor5-remove-format": "^39.0",
+        "@ckeditor/ckeditor5-source-editing": "^39.0",
+        "@ckeditor/ckeditor5-table": "^39.0",
+        "@ckeditor/ckeditor5-theme-lark": "^39.0",
+        "@ckeditor/ckeditor5-typing": "^39.0",
+        "@ckeditor/ckeditor5-vue": "^5.1",
         "@dbca/gov-vue3-components": "^0.0.11",
         "@fortawesome/fontawesome-free": "^6.0.0",
         "@vue/cli-service": "^5.0.4",
@@ -48,14 +48,14 @@
         "moment": "^2.29.3",
         "moment-locales-webpack-plugin": "^1.2.0",
         "moment-range": "^4.0.2",
-        "ol": "^6.3.1",
-        "postcss-loader": "^4.0.2",
+        "ol": "^8.1",
+        "postcss-loader": "^7.3",
         "raw-loader": "^4.0.2",
-        "select2": "^4.0.3",
+        "select2": "^4.0",
         "select2-bootstrap-5-theme": "^1.2.0",
-        "sweetalert2": "^11.4.10",
-        "uuid": "^8.3.2",
-        "vue": "^3.2.32",
+        "sweetalert2": "^11.7",
+        "uuid": "^9.0",
+        "vue": "^3.3.4",
         "vue-multiselect": "^3.0.0-beta.2",
         "vue-router": "^4.0.14"
     },
@@ -69,11 +69,11 @@
         "not ie <= 8"
     ],
     "devDependencies": {
-        "eslint": "^8.15.0",
-        "eslint-config-prettier": "^8.8.0",
-        "eslint-plugin-prettier": "^4.2.1",
-        "prettier": "2.8.4",
-        "vls": "^0.7.6",
+        "eslint": "^8.49",
+        "eslint-config-prettier": "^9.0",
+        "eslint-plugin-prettier": "^5.0",
+        "prettier": "^3.0",
+        "vls": "^0.8.5",
         "webpack-bundle-analyzer": "^4.9.0"
     }
 }
