--- a/leaseslicensing/frontend/leaseslicensing/package.json
+++ b/leaseslicensing/frontend/leaseslicensing/package.json
@@ -36,11 +36,11 @@
         "@ckeditor/ckeditor5-vue": "^5.1",
         "@dbca/gov-vue3-components": "^0.0.11",
         "@fortawesome/fontawesome-free": "^6.0.0",
-        "@vue/cli-service": "^5.0.4",
+        "@vue/cli-service": "^5.0",
         "currency.js": "^2.0.4",
-        "datatables.net-bs5": "^1.12.1",
-        "datatables.net-buttons-bs5": "^2.3.3",
-        "datatables.net-responsive-bs5": "^2.3.0",
+        "datatables.net-bs5": "^1.13",
+        "datatables.net-buttons-bs5": "^2.3",
+        "datatables.net-responsive-bs5": "^2.3",
         "jquery": "^3.6.0",
         "jquery-validation": "^1.19.3",
         "jszip": "^3.9.1",
@@ -48,17 +48,17 @@
         "moment": "^2.29.3",
         "moment-locales-webpack-plugin": "^1.2.0",
         "moment-range": "^4.0.2",
-        "ol": "^8.1",
+        "ol": "^8.2",
         "ol-ext": "^4.0.11",
         "postcss-loader": "^7.3",
         "raw-loader": "^4.0.2",
-        "select2": "^4.0",
+        "select2": "^4.1.0-rc.0",
         "select2-bootstrap-5-theme": "^1.2.0",
         "sweetalert2": "^11.7",
         "uuid": "^9.0",
-        "vue": "^3.3.4",
+        "vue": "^3.3",
         "vue-multiselect": "^3.0.0-beta.2",
-        "vue-router": "^4.0.14"
+        "vue-router": "^4.0"
     },
     "engines": {
         "node": ">= 4.0.0",
