--- a/leaseslicensing/frontend/leaseslicensing/package.json
+++ b/leaseslicensing/frontend/leaseslicensing/package.json
@@ -41,6 +41,7 @@
         "datatables.net-bs5": "^1.13",
         "datatables.net-buttons-bs5": "^2.3",
         "datatables.net-responsive-bs5": "^2.3",
+        "eslint-plugin-vue": "^9.19.2",
         "jquery": "^3.6.0",
         "jquery-validation": "^1.19.3",
         "jszip": "^3.9.1",
