--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,8 @@ python-docx = "^0.8"
 gunicorn = "^19.10"
 drf-standardized-errors = "^0.12"
 pre-commit = "^3.4.0"
+python-decouple = "^3.8"
+appmonitor_client = {git = "https://github.com/dbca-wa/appmonitor_client.git", rev="main"}
 
 [tool.poetry.dev-dependencies]
 django-debug-toolbar = "^3.4"
