--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ appmonitor_client = {git = "https://github.com/dbca-wa/appmonitor_client.git", r
 ipython = "^8.15"
 django-cron = "^0.6.0"
 tomli = "^2.0.1"
+sentry-sdk = "^1.44.1"
 
 [tool.poetry.dev-dependencies]
 django-debug-toolbar = "^3.4"
