--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ license = "Apache-2.0"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-Django = "^3.2"
+Django = "5.0.8"
 django-confy = "^1.0" # old
 dj-database-url = "^0.5" # old
 django_countries = "^7.3"
@@ -54,6 +54,8 @@ ipython = "^8.15"
 django-cron = "^0.6.0"
 tomli = "^2.0.1"
 sentry-sdk = "^1.44.1"
+django5_six = {git = "https://github.com/dbca-wa/django5-utils-six.git", rev="master"}
+numpy = "1.26.4"
 
 [tool.poetry.dev-dependencies]
 django-debug-toolbar = "^3.4"
