--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ license = "Apache-2.0"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-Django = "5.0.8"
+Django = "^5.1"
 django-confy = "^1.0" # old
 dj-database-url = "^0.5" # old
 django_countries = "^7.3"
@@ -51,14 +51,14 @@ pre-commit = "^3.4.0"
 python-decouple = "^3.8"
 appmonitor_client = {git = "https://github.com/dbca-wa/appmonitor_client.git", rev="main"}
 ipython = "^8.15"
-django-cron = "^0.6.0"
+django-cron = {git = "https://github.com/jorenham/django-cron.git", rev="master"}
 tomli = "^2.0.1"
 sentry-sdk = "^1.44.1"
 django5_six = {git = "https://github.com/dbca-wa/django5-utils-six.git", rev="master"}
 numpy = "1.26.4"
 
 [tool.poetry.dev-dependencies]
-django-debug-toolbar = "^3.4"
+django-debug-toolbar = "^4.4"
 ipdb = "^0.13"
 pylint = "^2.13"
 flake8 = "^6.1"
