--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,11 @@ version = "1.0.0"
 description = "Leases Licensing"
 authors = ["DBCA OIM <asi@dbca.wa.gov.au>"]
 license = "Apache-2.0"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.10"
-Django = "^5.1"
+Django = "5.0.8"
 django-confy = "^1.0" # old
 dj-database-url = "^0.5" # old
 django_countries = "^7.3"
@@ -45,7 +46,7 @@ django_media_serv = {git = "https://github.com/dbca-wa/django-media-serv.git", r
 pandas = "1.5.2"
 geopandas = "^0.12"
 python-docx = "^0.8"
-gunicorn = "^19.10"
+gunicorn = "^22.0"
 drf-standardized-errors = "^0.12"
 pre-commit = "^3.4.0"
 python-decouple = "^3.8"
