Update dev dependencies declaration for poetry 2+.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,7 @@ django5_six = {git = "https://github.com/dbca-wa/django5-utils-six.git", rev="ma
 numpy = "1.26.4"
 django-vite = "^3.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 django-debug-toolbar = "^4.4"
 ipdb = "^0.13"
 pylint = "^2.13"
