Add entry for django-filter and add comment to explain that django-filter and djangorestframework are being held back by the djangorestframework-gis version.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ django-confy = "^1.0" # old
 django-cron = {git = "https://github.com/dbca-wa/django-cron.git", rev="master"}
 django-dirtyfields = "^1.8"
 django-extensions = "^4.1"
+django-filter = "^24.3" # Currently constrained to 3.15 due to djangorestframework-gis
 django-phonenumber-field = "^8.1"
 django-reversion = "^5.0"
 django-reversion-compare = "^0.18"
@@ -33,7 +34,7 @@ django-utils-six = "^2.0" # old
 django-vite = "^3.0"
 django-widget-tweaks = "^1.4"
 django5_six = {git = "https://github.com/dbca-wa/django5-utils-six.git", rev="master"}
-djangorestframework = "^3.15"
+djangorestframework = "^3.15" # Currently constrained to 3.15 due to djangorestframework-gis
 djangorestframework-datatables = "^0.7"
 djangorestframework-gis = "1.1"
 drf-standardized-errors = "^0.14"
