--- a/leaseslicensing/frontend/leaseslicensing/package.json
+++ b/leaseslicensing/frontend/leaseslicensing/package.json
@@ -11,30 +11,10 @@
         "lint": "eslint -c eslint.config.mjs . --fix"
     },
     "dependencies": {
-        "@ckeditor/ckeditor5-alignment": "^46.0",
-        "@ckeditor/ckeditor5-autoformat": "^46.0",
-        "@ckeditor/ckeditor5-basic-styles": "^46.0",
-        "@ckeditor/ckeditor5-block-quote": "^46.0",
-        "@ckeditor/ckeditor5-ckbox": "^46.0",
-        "@ckeditor/ckeditor5-cloud-services": "^46.0",
-        "@ckeditor/ckeditor5-editor-classic": "^46.0",
-        "@ckeditor/ckeditor5-essentials": "^46.0",
-        "@ckeditor/ckeditor5-heading": "^46.0",
-        "@ckeditor/ckeditor5-image": "^46.0",
-        "@ckeditor/ckeditor5-indent": "^46.0",
-        "@ckeditor/ckeditor5-link": "^46.0",
-        "@ckeditor/ckeditor5-list": "^46.0",
-        "@ckeditor/ckeditor5-media-embed": "^46.0",
-        "@ckeditor/ckeditor5-paragraph": "^46.0",
-        "@ckeditor/ckeditor5-paste-from-office": "^46.0",
-        "@ckeditor/ckeditor5-remove-format": "^46.0",
-        "@ckeditor/ckeditor5-source-editing": "^46.0",
-        "@ckeditor/ckeditor5-table": "^46.0",
-        "@ckeditor/ckeditor5-theme-lark": "^46.0",
-        "@ckeditor/ckeditor5-typing": "^46.0",
         "@ckeditor/ckeditor5-vue": "^7.3",
         "@dbca/gov-vue3-components": "^0.0.15",
         "@fortawesome/fontawesome-free": "^6.0",
+        "ckeditor5": "^46.0",
         "@vitejs/plugin-vue": "^6.0.0",
         "currency.js": "^2.0",
         "datatables.net-bs5": "^2.1",
